--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,12 +28,10 @@ jobs:
       run: npm run build
     - name: Adjustment
       run: |
-           mkdir build
-           cp -R dist build
-           cp package.json build/package.json
+           cp package.json dist/package.json
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         branch: build
-        folder: build
+        folder: dist
