--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "@types/node": "^18.11.18",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "hex-to-rgba": "^2.0.1"
   }
 }
